fixed nav bar link spacing

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -52,7 +52,7 @@ p {
             color: $-dark-grey;
             display: flex;
             justify-content: space-between;
-            padding-right: 850px;
+            padding-right: 550px;
             li {
                 list-style-type: none;
                 display: inline;
